// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`promiseFilmDetails()(dispatch) 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "isFetching": true,
      },
      "type": "update-is-fetching",
    },
  ],
  Array [
    Object {
      "data": Object {
        "isFetching": false,
      },
      "type": "update-is-fetching",
    },
  ],
  Array [
    Object {
      "data": Object {
        "filmDetails": Object {
          "filmDetails": Object {
            "director": "Joe Director",
            "title": "a title",
          },
        },
      },
      "type": "update-film-details",
    },
  ],
]
`;

exports[`promiseQueryPageFetch()(dispatch) 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "isFetching": true,
      },
      "type": "update-is-fetching",
    },
  ],
  Array [
    Object {
      "data": Object {
        "isFetching": false,
      },
      "type": "update-is-fetching",
    },
  ],
  Array [
    Object {
      "data": Object {
        "films": Array [
          Object {
            "imdbID": 3,
            "title": "Rocky Horror II",
          },
          Object {
            "imdbID": 4,
            "title": "Halloween II",
          },
        ],
        "pageNum": 2,
      },
      "type": "append-films",
    },
  ],
]
`;

exports[`promiseQueryResults()(dispatch) invokes dispatch({type: Actions.REPLACE_FILMS}) 1`] = `
Array [
  Array [
    Object {
      "data": Object {
        "isFetching": true,
      },
      "type": "update-is-fetching",
    },
  ],
  Array [
    Object {
      "data": Object {
        "isFetching": false,
      },
      "type": "update-is-fetching",
    },
  ],
  Array [
    Object {
      "data": Object {
        "films": Array [
          Object {
            "imdbID": 1,
            "title": "Rocky Horror",
          },
          Object {
            "imdbID": 2,
            "title": "Halloween",
          },
        ],
        "pageNum": 1,
        "query": "a query",
        "totalResults": "4",
      },
      "type": "update-films",
    },
  ],
]
`;
